--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,8 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  n_gamepad: ^0.0.3
+  n_gamepad:
+    path: ../n_gamepad
   n_minecraft:
     path: ../n_minecraft
 
